Add Experiences Page
Signed-off-by: AyushR1 <ayushrathore12501@gmail.com>

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <meta name="twitter:title" content="Ayush Rathore">
     <meta name="twitter:description" content="Portfolio of Ayush Rathore" />
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="www.ayushr1.">
+    <meta name="twitter:site" content="www.ayushr1.tech">
     <meta name="application-name" content="AyushR1  | Home" />
     <meta name="apple-mobile-web-app-title" content="AyushR1 | Home" />
-    <meta name="summary" content="An open source project aimed at providing free and beautiful templates to everyone for building their portfolio websites and showcase their work to the world." />
+    <meta name="summary" content="Portfolio of Ayush Rathore." />
     <!--For Dark/Light mode Toggle-->
     <script src="https://code.iconify.design/1/1.0.4/iconify.min.js"></script>
     <!--Import Google Icon Font-->
@@ -69,6 +69,7 @@
                 <span style="display: inline;">A sporty🏸🏋️🏏🚵‍♂️ guy who <span class="animated-text"
                     data-words="loves programming, is a Technophile, is a Coder , is a Developer"></span>
                 </span>
+                <br/>
                 <div>
                     <div class="social-icons">
 
